cm4all-beng-proxy (0.7.23) unstable; urgency=low

  * sink-header: support splice
  * memcached-client: support splice (response)
  * fcgi-client: recover correctly after send error
  * fcgi-client: support chunked request body
  * http-cache: duplicate headers
  * {http,memcached}-client: check "direct" mode after buffer flush
  * cmdline: added option "fcgi_stock_limit"
  * python: auto-export function write_packet()

 --

cm4all-beng-proxy (0.7.22) unstable; urgency=low

  * python: re-add function write_packet()

 -- Max Kellermann <mk@cm4all.com>  Fri, 12 Mar 2010 12:27:21 +0100

cm4all-beng-proxy (0.7.21) unstable; urgency=low

  * ajp-client: handle EAGAIN from send()
  * python: install the missing sources

 -- Max Kellermann <mk@cm4all.com>  Thu, 11 Mar 2010 16:58:25 +0100

cm4all-beng-proxy (0.7.20) unstable; urgency=low

  * http-client: don't reinstate event when socket is closed
  * access-log: log the site name
  * python: removed unused function write_packet()
  * python: split the module beng_proxy.translation
  * python: allow overriding query string and param in absolute_uri()
  * python: moved absolute_uri() to a separate library

 -- Max Kellermann <mk@cm4all.com>  Thu, 11 Mar 2010 09:48:52 +0100

cm4all-beng-proxy (0.7.19) unstable; urgency=low

  * client-socket: translate EV_TIMEOUT to ETIMEDOUT
  * fork: refill the input buffer as soon as possible
  * delegate-client: implement an abortable event
  * pool: added assertions for libevent leaks
  * direct: added option "-s enable_splice=no"

 -- Max Kellermann <mk@cm4all.com>  Thu, 04 Mar 2010 17:34:56 +0100

cm4all-beng-proxy (0.7.18) unstable; urgency=low

  * args: reserve memory for the trailing null byte

 -- Max Kellermann <mk@cm4all.com>  Tue, 23 Feb 2010 17:46:04 +0100

cm4all-beng-proxy (0.7.17) unstable; urgency=low

  * translation: added the BOUNCE packet (variant of REDIRECT)
  * translation: change widget packet HOST to UNTRUSTED